# cookiecutter_pythonpackage

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg
{{ cookiecutter.project_slug }}/.github/workflows/: lint_and_test.yml
{{ cookiecutter.project_slug }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_slug }}/docs/source/pages/: api.rst
{{ cookiecutter.project_slug }}/test/: test_{{cookiecutter.project_slug}}.py
